# BuildSystem

./: README.md
HelloWord/: CMakeLists.txt
HelloWord/example/: CMakeLists.txt  main.cpp
HelloWord/src/: CMakeLists.txt  helloworld.cpp  helloworld.h  main.cpp
doc/: NoteBook
